--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
         "normalize.css": "^8.0.1",
         "raw-loader": "^4.0.1",
         "react": "^16.13.1",
+        "react-dnd": "^11.1.3",
+        "react-dnd-html5-backend": "^11.1.3",
         "react-dom": "^16.13.1",
         "react-hot-loader": "^4.12.21",
         "react-sizeme": "^2.6.12",
